--- a/website/styles.css
+++ b/website/styles.css
@@ -53,18 +53,27 @@ code {
 h1 {
   text-align: center;
   font-size: 50px;
+  font-weight: bold;
+  margin: 0.5em;
 }
 
+.carousel-indicators [data-bs-target] {
+  background-color: #fff; /* Set indicator color to white */
+}
 
 h2 {
   text-align: center;
-  font-size: 30px;
+  font-size: 40px;
+  font-weight: bold;
+  margin: 1em;
 }
 
 
 h3 {
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
+  font-weight: bold;
+  margin: 1em;
 }
 
 .image-container {
@@ -205,6 +214,7 @@ main {
 
 .authors {
   font-size: 1.5em;
+  max-width: 120%;
 }
 
 .unis {
@@ -216,7 +226,7 @@ main {
 }
 
 .second {
-  max-width: 60%;
+  max-width: 80%;
   margin: auto;
 }
 
@@ -229,8 +239,8 @@ main {
 }
 
 .image-container img {
-max-width: 100%;
-height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .slider {
